Document PPDG/src/objects/Branch_Observation_Form__c.object
<CustomObject>
    <fields>
        <fullName>Agree_Agenda_for_Appointment__c</fullName>
        <label>Agree Agenda for Appointment</label>
        <picklist>
            <controllingField>Type_of_Observation__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appearance_of_Staff_and_Office__c</fullName>
        <inlineHelpText>Workstation - Tidy and stocked of stationary</inlineHelpText>
        <label>Appearance of Staff and Office</label>
        <picklist>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appropriate_Body_Language__c</fullName>
        <inlineHelpText>Open and approachable for customer to engage.</inlineHelpText>
        <label>Appropriate Body Language</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asked_ITAEICHYW__c</fullName>
        <inlineHelpText>Asked is there anything else I can help you with?</inlineHelpText>
        <label>Asked Is There Anything Else?</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asked_for_Referrals__c</fullName>
        <label>Asked for Referrals</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_Score__c</fullName>
        <formula>CASE(  Staff_Member_Summarised__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Leaflets_Cards_handed_to_customer__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Follow_up_task_added_to_diary__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Asked_ITAEICHYW__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closure Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments11__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments12__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments13__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_1__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_C10__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_C2__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments_C3__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Disclosures__c</fullName>
        <inlineHelpText>For any products agreed</inlineHelpText>
        <label>Compliance Disclosures: FSA/DPA/Sharia</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Confirm_Customer_Details_Up_to_Date__c</fullName>
        <label>Confirm Customer Details Up to Date</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courteous_Professional__c</fullName>
        <inlineHelpText>Handles customer and communicates professional.</inlineHelpText>
        <label>Courteous &amp; Professional</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_Sale_2__c</fullName>
        <formula>CASE(  Compliance_Disclosures__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  SMART_Banking_Options_Explained__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Sale_Completed__c , &quot;Pass&quot;,10, &quot;Minor development&quot;,7,&quot;Major Development&quot;,3, 0) + CASE(  Referral_Won__c  , &quot;Pass&quot;,10, &quot;Minor development&quot;,7,&quot;Major Development&quot;,3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cross_Sale_Score__c</fullName>
        <formula>CASE(  Identified_Needs__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Proposed_Products__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Asked_for_Referrals__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  T_Cs_explained_cross_sale__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Processed_Accurately__c</fullName>
        <inlineHelpText>Staff processed request correctly on system.</inlineHelpText>
        <label>Customer Request Processed Accurately</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Devleopment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer&apos;s Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Branch Observation Forms</relationshipLabel>
        <relationshipName>Branch_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Observation__c</fullName>
        <label>Date and Time of Observation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Development_Areas_Maximum_of_3__c</fullName>
        <inlineHelpText>What development has been identified this observation?</inlineHelpText>
        <label>Development Areas (Maximum of 3)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Establish_Correct_Documents_for_Appt__c</fullName>
        <label>Establish Correct Documents for Appt</label>
        <picklist>
            <controllingField>Type_of_Observation__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Establish_OK_to_talk_and_Reason_for_call__c</fullName>
        <label>Establish OK to talk and Reason for call</label>
        <picklist>
            <controllingField>Type_of_Observation__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_task_added_to_diary__c</fullName>
        <inlineHelpText>Noted follow up on SFDC/Outlook/etc if applicable.</inlineHelpText>
        <label>Follow up task added to diary</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Friendly_and_Helpful__c</fullName>
        <inlineHelpText>Shows willingness to help customer with their request.</inlineHelpText>
        <label>Friendly and Helpful</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GOAL_Aims_and_vision_SMART__c</fullName>
        <inlineHelpText>What does the staff member actually need to be?</inlineHelpText>
        <label>GOAL - Aims and vision (SMART)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Greeting__c</fullName>
        <inlineHelpText>Customer appropriately greeted and staff member introduced self where applicable.</inlineHelpText>
        <label>Greeting</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identified_Needs__c</fullName>
        <inlineHelpText>Staff member explored, through open/closed questioning, customers potential wider needs.</inlineHelpText>
        <label>Identified Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inital_Query_Score_2__c</fullName>
        <formula>CASE(  Paperwork_Completed_Compliantly__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Salesforce_Updated__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  T_Cs__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inital Query Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Query_Score_Total__c</fullName>
        <formula>Inital_Query_Score_2__c  +  Initial_Query_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Query Score Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Query_Score__c</fullName>
        <formula>CASE(  Provide__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Process_System_Knowledge__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Processed_Customer_Request_Accurately__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Product_Knowledge__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)+ CASE(   Customer_Request_Processed_Accurately__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Query Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Introduction2__c</fullName>
        <formula>CASE(  MOS_Confirmed_Customer_Request__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Establish_Correct_Documents_for_Appt__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Agree_Agenda_for_Appointment__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Establish_OK_to_talk_and_Reason_for_call__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Introduction Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Introduction_Score_Total__c</fullName>
        <formula>Introduction_Score__c  +  Introduction2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Introduction Score Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Introduction_Score__c</fullName>
        <formula>CASE( Appearance_of_Staff_and_Office__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE( Greeting__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Security_ID_V_Completed__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Confirm_Customer_Details_Up_to_Date__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Introduction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leaflets_Cards_handed_to_customer__c</fullName>
        <inlineHelpText>All applicable leaflets handed over e.g. Customer care, Product leaflets, Charges, etc</inlineHelpText>
        <label>Leaflets &amp; Cards handed to customer</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>East Ham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off site.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitechapel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MOS_Confirmed_Customer_Request__c</fullName>
        <label>MOS Confirmed Customer Request</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_s_Signature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager&apos;s Signature</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Observation_Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPTIONS_What_s_possible__c</fullName>
        <inlineHelpText>How can the staff member achieve the goal? What opportunities can they explore?</inlineHelpText>
        <label>OPTIONS - What’s possible?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Observee_s_Line_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Undertaking Observation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branch_Observation_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Developing(Major) : Some important areas need extra work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing(Minor): Generally good: minor development points.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail: Below an acceptable standard.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass: High standard throughout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paperwork_Completed_Compliantly__c</fullName>
        <inlineHelpText>Staff completed related documentation correctly.</inlineHelpText>
        <label>Paperwork Completed Compliantly</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Scored__c</fullName>
        <inlineHelpText>Total points available to use to calculate the % are:
Calls = 124 
Enquiries = 120
Meetings = 132</inlineHelpText>
        <label>Percentage Scored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Person_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person File</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Branch Observation Forms</relationshipLabel>
        <relationshipName>Branch_Observation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Development__c</fullName>
        <inlineHelpText>What development was raised from last observation?</inlineHelpText>
        <label>Previous Development</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_System_Knowledge__c</fullName>
        <inlineHelpText>Staff was aware how to process customer request</inlineHelpText>
        <label>Process System Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processed_Customer_Request_Accurately__c</fullName>
        <label>Processed Customer Request Accurately</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Knowledge__c</fullName>
        <inlineHelpText>Staff had sufficient knowledge of the product discussed.</inlineHelpText>
        <label>Product Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <inlineHelpText>Pitched for products and service matching Features/benefits to customer needs.</inlineHelpText>
        <label>Proposed Prod &amp; Related benefits to need</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide__c</fullName>
        <inlineHelpText>Able to answer all customers questions accurately and confidently.</inlineHelpText>
        <label>Provide Confident &amp; Accurate Answers</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REALITY_Current_PTT_obs__c</fullName>
        <inlineHelpText>Where is the staff member at present? Actual performance at present?</inlineHelpText>
        <label>REALITY - Current PTT/obs?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rapport_Building_Score__c</fullName>
        <formula>CASE(  Friendly_and_Helpful__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Courteous_Professional__c , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Appropriate_Body_Language__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0) + CASE(  Tone_Pace_Clarity__c  , &quot;Pass&quot;,4, &quot;Minor development&quot;,3,&quot;Major Development&quot;,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rapport Building Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Won__c</fullName>
        <inlineHelpText>Was a referral gained or competently requested for?</inlineHelpText>
        <label>Referral Won?</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and Service Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Customer Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cashier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMART_Banking_Options_Explained__c</fullName>
        <label>SMART Banking Options Explained</label>
        <picklist>
            <controllingField>Type_of_Observation__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Completed__c</fullName>
        <inlineHelpText>Was a sale concluded or competently attempted to be concluded?</inlineHelpText>
        <label>Sale Completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Score_Total__c</fullName>
        <formula>Cross_Sale_Score__c  +  Cross_Sale_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Score Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Updated__c</fullName>
        <inlineHelpText>Has the staff member completed all the necessary details on Salesforce?</inlineHelpText>
        <label>Salesforce Updated</label>
        <picklist>
            <controllingField>Type_of_Observation__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_ID_V_Completed__c</fullName>
        <inlineHelpText>Via EBA for existing customers or KYC/KYB docs for new.</inlineHelpText>
        <label>Security ID &amp; V Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>